data sources updated

--- a/code/Al 4 Stocks over time percentage change.ipynb
+++ b/code/Al 4 Stocks over time percentage change.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "4795e739-0f3f-42f2-b86d-80623758d30d",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('COST.csv')\n",
+    "df = pd.read_csv('../data/COST.csv')\n",
     "\n",
     "# Convert the 'Date' column to datetime format\n",
     "df['Date'] = pd.to_datetime(df['Date'])\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "6cd0a4d6-cb05-425f-aaf4-8868fbbec067",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
    ],
    "source": [
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('TGT.csv')\n",
+    "df = pd.read_csv('../data/TGT.csv')\n",
     "\n",
     "# Convert the 'Date' column to datetime format\n",
     "df['Date'] = pd.to_datetime(df['Date'])\n",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "id": "bad63230-4e59-4d7c-90d4-84d2159febe2",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
    ],
    "source": [
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('WMT.csv')\n",
+    "df = pd.read_csv('../data/WMT.csv')\n",
     "\n",
     "# Convert the 'Date' column to datetime format\n",
     "df['Date'] = pd.to_datetime(df['Date'])\n",
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "id": "fc0b5675-ab36-45f9-9f02-a508d3628f60",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1227,7 @@
    ],
    "source": [
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('ACI.csv')\n",
+    "df = pd.read_csv('../data/ACI.csv')\n",
     "\n",
     "# Convert the 'Date' column to datetime format\n",
     "df['Date'] = pd.to_datetime(df['Date'])\n",
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "20a3e545-03f5-4352-92f1-9ce809222f04",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1398,7 @@
     "# Calculate Percentage Change in Stock Price\n",
     "\n",
     "# Read the daily stock data from the CSV file\n",
-    "stock_data = pd.read_csv('COST.csv')\n",
+    "stock_data = pd.read_csv('../data/COST.csv')\n",
     "\n",
     "# Convert the date column to datetime format\n",
     "stock_data['Date'] = pd.to_datetime(stock_data['Date'])\n",
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "f1f2e23c-d0f5-4440-aeff-0a5c5fa24718",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1572,7 @@
     "# Calculate Percentage Change in Stock Price\n",
     "\n",
     "# Read the daily stock data from the CSV file\n",
-    "stock_data = pd.read_csv('TGT.csv')\n",
+    "stock_data = pd.read_csv('../data/TGT.csv')\n",
     "\n",
     "# Convert the date column to datetime format\n",
     "stock_data['Date'] = pd.to_datetime(stock_data['Date'])\n",
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "5d924f4b-e5c8-4671-b238-19d51ec68353",
    "metadata": {},
    "outputs": [
@@ -1746,7 +1746,7 @@
     "# Calculate Percentage Change in Stock Price\n",
     "\n",
     "# Read the daily stock data from the CSV file\n",
-    "stock_data = pd.read_csv('WMT.csv')\n",
+    "stock_data = pd.read_csv('../data/WMT.csv')\n",
     "\n",
     "# Convert the date column to datetime format\n",
     "stock_data['Date'] = pd.to_datetime(stock_data['Date'])\n",
@@ -1769,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "id": "f42e86fe-82e8-4e70-9dde-8be0d6311771",
    "metadata": {},
    "outputs": [
@@ -2232,7 +2232,7 @@
     "# Calculate Percentage Change in Stock Price\n",
     "\n",
     "# Read the daily stock data from the CSV file\n",
-    "stock_data = pd.read_csv('ACI.csv')\n",
+    "stock_data = pd.read_csv('../data/ACI.csv')\n",
     "\n",
     "# Convert the date column to datetime format\n",
     "stock_data['Date'] = pd.to_datetime(stock_data['Date'])\n",
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "id": "9f30dfe4-2d21-44cb-9503-987c11ad03ab",
    "metadata": {},
    "outputs": [
@@ -2276,10 +2276,10 @@
     "import pandas as pd\n",
     "\n",
     "# Read the daily stock data from the CSV files for each stock\n",
-    "stock_data_cost = pd.read_csv('COST.csv')\n",
-    "stock_data_wmt = pd.read_csv('WMT.csv')\n",
-    "stock_data_tgt = pd.read_csv('TGT.csv')\n",
-    "stock_data_aci = pd.read_csv('ACI.csv')\n",
+    "stock_data_cost = pd.read_csv('../data/COST.csv')\n",
+    "stock_data_wmt = pd.read_csv('../data/WMT.csv')\n",
+    "stock_data_tgt = pd.read_csv('../data/TGT.csv')\n",
+    "stock_data_aci = pd.read_csv('../data/ACI.csv')\n",
     "\n",
     "# Add a 'Symbol' column to each DataFrame\n",
     "stock_data_cost['Symbol'] = 'COST'\n",
@@ -2302,7 +2302,7 @@
     "monthly_data['Percentage_Change'] = (monthly_data['Price_Difference'] / monthly_data['Open']) * 100\n",
     "\n",
     "# Save the combined data to a CSV file\n",
-    "monthly_data.to_csv('combined_data_with_symbol.csv', index=False)\n",
+    "monthly_data.to_csv('../data/combined_data_with_symbol.csv', index=False)\n",
     "\n",
     "# Display the first few rows of the combined data\n",
     "print(monthly_data.head())"
@@ -2310,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "id": "cdc629d2-c208-407e-8d24-53087e6973f8",
    "metadata": {},
    "outputs": [
@@ -2323,6 +2323,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2330,7 +2339,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Read the combined data from the CSV file\n",
-    "monthly_data = pd.read_csv('combined_data_with_symbol.csv')\n",
+    "monthly_data = pd.read_csv('../data/combined_data_with_symbol.csv')\n",
     "\n",
     "# Convert the 'Date' column to datetime format\n",
     "monthly_data['Date'] = pd.to_datetime(monthly_data['Date'])\n",
@@ -2347,7 +2356,10 @@
     "plt.ylabel('Percentage Change')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# Saving of chart to output folder\n",
+    "plt.savefig(f\"../output/All Stock Percent Change - Line Chart.png\")\n"
    ]
   },
   {
@@ -2383,7 +2395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
