--- a/code/Al 4 Stocks over time percentage change.ipynb
+++ b/code/Al 4 Stocks over time percentage change.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4795e739-0f3f-42f2-b86d-80623758d30d",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "6cd0a4d6-cb05-425f-aaf4-8868fbbec067",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "bad63230-4e59-4d7c-90d4-84d2159febe2",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "fc0b5675-ab36-45f9-9f02-a508d3628f60",
    "metadata": {},
    "outputs": [
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "20a3e545-03f5-4352-92f1-9ce809222f04",
    "metadata": {},
    "outputs": [
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "f1f2e23c-d0f5-4440-aeff-0a5c5fa24718",
    "metadata": {},
    "outputs": [
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "5d924f4b-e5c8-4671-b238-19d51ec68353",
    "metadata": {},
    "outputs": [
@@ -1769,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f42e86fe-82e8-4e70-9dde-8be0d6311771",
    "metadata": {},
    "outputs": [
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "9f30dfe4-2d21-44cb-9503-987c11ad03ab",
    "metadata": {},
    "outputs": [
@@ -2323,15 +2323,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -2356,10 +2347,12 @@
     "plt.ylabel('Percentage Change')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()\n",
+    "\n",
     "\n",
     "# Saving of chart to output folder\n",
-    "plt.savefig(f\"../output/All Stock Percent Change - Line Chart.png\")\n"
+    "plt.savefig(\"../output/All Stock Percent Change - Line Chart.png\")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
