--- a/code/Percentage change in stock price over time.ipynb
+++ b/code/Percentage change in stock price over time.ipynb
@@ -15,15 +15,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -67,10 +58,11 @@
     "\n",
     "# Display the plot\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
+    "\n",
     "\n",
     "# Saving of chart to output folder\n",
-    "plt.savefig(f\"../output/All Stock - Bar Plot.png\")\n"
+    "plt.savefig(f\"../output/All Stock - Bar Plot.png\")\n",
+    "plt.show()"
    ]
   },
   {
