--- a/code/DDCost.ipynb
+++ b/code/DDCost.ipynb
@@ -30,7 +30,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
-    "file_path = '../data/COST.csv'  \n",
+    "file_path = '../data/COST_monthly.csv'  \n",
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Calculate the average of 'High' and 'Low' for each row\n",
