ROI data source change

--- a/code/ROI.ipynb
+++ b/code/ROI.ipynb
@@ -22,20 +22,20 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Read dividend payout data for all four companies\n",
-    "dividend_data_cost = pd.read_csv('COST Dividend Data.csv')\n",
-    "dividend_data_wmt = pd.read_csv('WMT Dividend Data.csv')\n",
-    "dividend_data_tgt = pd.read_csv('TGT Dividend Data.csv')\n",
-    "dividend_data_aci = pd.read_csv('ACI Dividend Data.csv')\n",
+    "dividend_data_cost = pd.read_csv('../data/COST Dividend Data.csv')\n",
+    "dividend_data_wmt = pd.read_csv('../data/WMT Dividend Data.csv')\n",
+    "dividend_data_tgt = pd.read_csv('../data/TGT Dividend Data.csv')\n",
+    "dividend_data_aci = pd.read_csv('../data/ACI Dividend Data.csv')\n",
     "\n",
     "# Convert 'Date' column to datetime with correct format for all companies\n",
     "for df in [dividend_data_cost, dividend_data_wmt, dividend_data_tgt, dividend_data_aci]:\n",
     "    df['Date'] = pd.to_datetime(df['Date'], format='%d/%m/%Y')\n",
     "\n",
     "# Read daily stock price data for all four companies\n",
-    "stock_price_data_cost = pd.read_csv('COST.csv')\n",
-    "stock_price_data_wmt = pd.read_csv('WMT.csv')\n",
-    "stock_price_data_tgt = pd.read_csv('TGT.csv')\n",
-    "stock_price_data_aci = pd.read_csv('ACI.csv')\n",
+    "stock_price_data_cost = pd.read_csv('../data/COST.csv')\n",
+    "stock_price_data_wmt = pd.read_csv('../data/WMT.csv')\n",
+    "stock_price_data_tgt = pd.read_csv('../data/TGT.csv')\n",
+    "stock_price_data_aci = pd.read_csv('../data/ACI.csv')\n",
     "\n",
     "# Convert 'Date' column to datetime with correct format for all companies\n",
     "for df in [stock_price_data_cost, stock_price_data_wmt, stock_price_data_tgt, stock_price_data_aci]:\n",
@@ -78,6 +78,8 @@
     "plt.ylabel('Return on Investment ($)')\n",
     "plt.title('Return on Investment (ROI) for Each Company')\n",
     "\n",
+    "# Saving of chart to output folder\n",
+    "plt.savefig(f\"../output/ROI Plot.png\")\n",
     "plt.show()\n"
    ]
   },
