--- a/code/monthly value changes.ipynb
+++ b/code/monthly value changes.ipynb
@@ -772,7 +772,7 @@
     "\n",
     "ax1.tick_params(rotation = 90)\n",
     "\n",
-    "plt.savefig(\"highervalue.png\")\n"
+    "plt.savefig(\"../output/highervalue.png\")\n"
    ]
   },
   {
@@ -824,7 +824,7 @@
     "\n",
     "ax1.tick_params(rotation = 90)\n",
     "\n",
-    "plt.savefig(\"lowervalue.png\")\n"
+    "plt.savefig(\"../output/lowervalue.png\")\n"
    ]
   },
   {
