--- a/code/Total Dividend Payouts.ipynb
+++ b/code/Total Dividend Payouts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "adedc6fb-e8e5-48ef-82c4-3fb310d6d67c",
    "metadata": {},
    "outputs": [
@@ -22,20 +22,20 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Read dividend payout data for all four companies\n",
-    "dividend_data_cost = pd.read_csv('COST Dividend Data.csv')\n",
-    "dividend_data_wmt = pd.read_csv('WMT Dividend Data.csv')\n",
-    "dividend_data_tgt = pd.read_csv('TGT Dividend Data.csv')\n",
-    "dividend_data_aci = pd.read_csv('ACI Dividend Data.csv')\n",
+    "dividend_data_cost = pd.read_csv('../data/COST Dividend Data.csv')\n",
+    "dividend_data_wmt = pd.read_csv('../data/WMT Dividend Data.csv')\n",
+    "dividend_data_tgt = pd.read_csv('../data/TGT Dividend Data.csv')\n",
+    "dividend_data_aci = pd.read_csv('../data/ACI Dividend Data.csv')\n",
     "\n",
     "# Convert 'Date' column to datetime with correct format for all companies\n",
     "for df in [dividend_data_cost, dividend_data_wmt, dividend_data_tgt, dividend_data_aci]:\n",
     "    df['Date'] = pd.to_datetime(df['Date'], format='%d/%m/%Y')\n",
     "\n",
     "# Read daily stock price data for all four companies\n",
-    "stock_price_data_cost = pd.read_csv('COST.csv')\n",
-    "stock_price_data_wmt = pd.read_csv('WMT.csv')\n",
-    "stock_price_data_tgt = pd.read_csv('TGT.csv')\n",
-    "stock_price_data_aci = pd.read_csv('ACI.csv')\n",
+    "stock_price_data_cost = pd.read_csv('../data/COST.csv')\n",
+    "stock_price_data_wmt = pd.read_csv('../data/WMT.csv')\n",
+    "stock_price_data_tgt = pd.read_csv('../data/TGT.csv')\n",
+    "stock_price_data_aci = pd.read_csv('../data/ACI.csv')\n",
     "\n",
     "# Convert 'Date' column to datetime with correct format for all companies\n",
     "for df in [stock_price_data_cost, stock_price_data_wmt, stock_price_data_tgt, stock_price_data_aci]:\n",
@@ -70,6 +70,9 @@
     "plt.ylabel('Total Dividend Payout ($)')\n",
     "plt.title('Total Dividend Payouts for our companies')\n",
     "\n",
+    "# Save the plot as an image file\n",
+    "plt.savefig('../output/total dividend payout.png')\n",
+    "\n",
     "# Show plot\n",
     "plt.show()\n"
    ]
@@ -91,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
