fine name changes

--- a/code/Last 5 Dividend Earnings.ipynb
+++ b/code/Last 5 Dividend Earnings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "d5254664-483b-46ed-b701-1bddd40c00f7",
    "metadata": {
     "scrolled": true
@@ -35,7 +35,7 @@
     "# Iterate over each company\n",
     "for company in companies:\n",
     "    # Load stock data CSV file\n",
-    "    stock_df = pd.read_csv(f'{company}.csv')\n",
+    "    stock_df = pd.read_csv(f'../data/{company}.csv')\n",
     "\n",
     "    # Extract the opening stock price for the first day\n",
     "    opening_price = stock_df.iloc[0]['Open']\n",
@@ -44,7 +44,7 @@
     "    shares_to_buy = 1000 / opening_price\n",
     "\n",
     "    # Load dividend data CSV file\n",
-    "    dividend_df = pd.read_csv(f'{company} Dividend Data.csv')\n",
+    "    dividend_df = pd.read_csv(f'../data/{company} Dividend Data.csv')\n",
     "\n",
     "    # Sort the dividend data by date\n",
     "    dividend_df['Date'] = pd.to_datetime(dividend_df['Date'], format='%d/%m/%Y')\n",
@@ -73,7 +73,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save the graph as a PNG file\n",
-    "plt.savefig('dividend_earnings.png')\n",
+    "plt.savefig('../output/dividend_earnings.png')\n",
     "\n",
     "# Display the graph\n",
     "plt.show()"
@@ -104,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
