--- a/code/ROI Annual.ipynb
+++ b/code/ROI Annual.ipynb
@@ -48,7 +48,7 @@
     "roi_aci_per_year = []\n",
     "\n",
     "# Iterate over each year and calculate ROI for each company for that year\n",
-    "for year in range(2019, 2024):  # Update the range to include 2019\n",
+    "for year in range(2019, 2024): \n",
     "    # Filter data for the current year\n",
     "    merged_data_cost_year = merged_data_cost[merged_data_cost['Date'].dt.year == year]\n",
     "    merged_data_wmt_year = merged_data_wmt[merged_data_wmt['Date'].dt.year == year]\n",
